more css styling

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
   font-size: 32px;
 }
 
+.display-button {
+  display: flex;
+  justify-content: center;
+}
+
 .add-entry-button {
   padding: 1rem 3rem;
   font-size: 18px;
@@ -14,4 +19,24 @@
   border-style: none;
   background-color: #7161ef;
   color: white;
+}
+
+.modal-background {
+  display: flex;
+  background-color: rgba(0 0 0 / 0.8);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+}
+
+.modal-window {
+  border-style: solid white;
+  background-color: white;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
 }
